chore: fix compile error